Don't push as latest if it failed

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,11 +36,11 @@ jobs:
     # Tag as :latest too
     - script: docker tag $(DockerHub_user)/$(docker_image_name):$(Build.BuildId) $(DockerHub_user)/$(docker_image_name):latest
       displayName: 'tag as latest'
-      condition: always()
+      # condition: always()
     # Push as latest
     - script: docker push $(DockerHub_user)/$(docker_image_name):latest
       displayName: 'push latest to DockerHub'
-      condition: always()
+      # condition: always()
 
   - job: "build_ros_kinetic_ros_base_2"
     timeoutInMinutes: 0
@@ -74,11 +74,11 @@ jobs:
     # Tag as :latest too
     - script: docker tag $(DockerHub_user)/$(docker_image_name):$(Build.BuildId) $(DockerHub_user)/$(docker_image_name):latest
       displayName: 'tag as latest'
-      condition: always()
+      # condition: always()
     # Push as latest
     - script: docker push $(DockerHub_user)/$(docker_image_name):latest
       displayName: 'push latest to DockerHub'
-      condition: always()
+      # condition: always()
  
   - job: package_stage_ros_base
     timeoutInMinutes: 0
@@ -113,11 +113,11 @@ jobs:
     # Tag as :latest too
     - script: docker tag $(DockerHub_user)/$(docker_image_name):$(Build.BuildId) $(DockerHub_user)/$(docker_image_name):latest
       displayName: 'tag as latest'
-      condition: always()
+      # condition: always()
     # Push as latest
     - script: docker push $(DockerHub_user)/$(docker_image_name):latest
       displayName: 'push latest to DockerHub'
-      condition: always()
+      # condition: always()
 
     # Create a temporal container to copy the gentoo_on_tmp.tar.gz
     - script: |
@@ -177,11 +177,11 @@ jobs:
     # Tag as :latest too
     - script: docker tag $(DockerHub_user)/$(docker_image_name):$(Build.BuildId) $(DockerHub_user)/$(docker_image_name):latest
       displayName: 'tag as latest'
-      condition: always()
+      # condition: always()
     # Push as latest
     - script: docker push $(DockerHub_user)/$(docker_image_name):latest
       displayName: 'push latest to DockerHub'
-      condition: always()
+      # condition: always()
 
   - job: "build_ros_kinetic_desktop_2"
     timeoutInMinutes: 0
@@ -212,11 +212,11 @@ jobs:
     # Tag as :latest too
     - script: docker tag $(DockerHub_user)/$(docker_image_name):$(Build.BuildId) $(DockerHub_user)/$(docker_image_name):latest
       displayName: 'tag as latest'
-      condition: always()
+      # condition: always()
     # Push as latest
     - script: docker push $(DockerHub_user)/$(docker_image_name):latest
       displayName: 'push latest to DockerHub'
-      condition: always()
+      # condition: always()
 
   - job: "build_ros_kinetic_desktop_3"
     timeoutInMinutes: 0
@@ -248,11 +248,11 @@ jobs:
     # Tag as :latest too
     - script: docker tag $(DockerHub_user)/$(docker_image_name):$(Build.BuildId) $(DockerHub_user)/$(docker_image_name):latest
       displayName: 'tag as latest'
-      condition: always()
+      # condition: always()
     # Push as latest
     - script: docker push $(DockerHub_user)/$(docker_image_name):latest
       displayName: 'push latest to DockerHub'
-      condition: always()
+      # condition: always()
  
   - job: package_stage_desktop
     timeoutInMinutes: 0
@@ -287,11 +287,11 @@ jobs:
     # Tag as :latest too
     - script: docker tag $(DockerHub_user)/$(docker_image_name):$(Build.BuildId) $(DockerHub_user)/$(docker_image_name):latest
       displayName: 'tag as latest'
-      condition: always()
+      # condition: always()
     # Push as latest
     - script: docker push $(DockerHub_user)/$(docker_image_name):latest
       displayName: 'push latest to DockerHub'
-      condition: always()
+      # condition: always()
 
     # Create a temporal container to copy the gentoo_on_tmp.tar.gz
     - script: |
