--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -148,7 +148,7 @@ jobs:
 
   - job: "build_ros_kinetic_desktop_1"
     timeoutInMinutes: 0
-    dependsOn: "package_stage_ros_base"
+    dependsOn: "build_ros_kinetic_ros_base_2"
 
     pool:
       vmImage: 'Ubuntu 16.04'
