--- a/ros_base/Dockerfile2
+++ b/ros_base/Dockerfile2
@@ -1,5 +1,5 @@
 # Just Ubuntu 16.04 with a user called user and some basic tools
-FROM awesomebytes/roogp_ros_kinetic_ros_base_setup
+FROM awesomebytes/roogp_ros_melodic_ros_base_setup
 
 # We got on emerging x11-libs/wxGTK-3.0.4-r302::gentoo
 # * Detected file collision(s):
@@ -45,14 +45,14 @@ RUN mv $EPREFIX/usr/bin/wxrc $EPREFIX/usr/bin/wxrc_bug_590124
 #  *   (no error message)
 RUN echo ">=dev-python/wxpython-4.0.6" >> $EPREFIX/etc/portage/package.mask
 RUN echo "# required by dev-python/wxpython-3.0.2.0::gentoo\n\
-# required by ros-kinetic/actionlib-1.11.13::ros-overlay\n\
-# required by ros-kinetic/ros_base-1.3.2::ros-overlay\n\
-# required by ros-kinetic/ros_base (argument)\n\
+# required by ros-melodic/actionlib-1.11.13::ros-overlay\n\
+# required by ros-melodic/ros_base-1.3.2::ros-overlay\n\
+# required by ros-melodic/ros_base (argument)\n\
 >=x11-libs/wxGTK-3.0.4-r2:3.0 tiff\n\
 # required by dev-python/wxpython-3.0.2.0::gentoo\n\
-# required by ros-kinetic/actionlib-1.11.13::ros-overlay\n\
-# required by ros-kinetic/ros_base-1.3.2::ros-overlay\n\
-# required by ros-kinetic/ros_base (argument)\n\
+# required by ros-melodic/actionlib-1.11.13::ros-overlay\n\
+# required by ros-melodic/ros_base-1.3.2::ros-overlay\n\
+# required by ros-melodic/ros_base (argument)\n\
 >=x11-libs/pango-1.42.4-r2 X" >> $EPREFIX/etc/portage/package.use
 
 
@@ -71,14 +71,26 @@ RUN echo ">=dev-lisp/sbcl-1.5.0" >> $EPREFIX/etc/portage/package.mask
 RUN unlink $EPREFIX/usr/bin/gm4 \
     && ln -s $EPREFIX/usr/bin/m4 $EPREFIX/usr/bin/gm4
 
+# Until https://github.com/ros/ros-overlay/pull/965 is merged
+# We add manually the rospack ebuild without the double rosdep dependency
+RUN wget https://raw.githubusercontent.com/ros/ros-overlay/bb747eb5321c95b5dcd53715424b9fc1d20e97ac/ros-melodic/rospack/Manifest -O $EPREFIX/usr/local/portage/ros-melodic/rospack/Manifest &&\
+    wget https://raw.githubusercontent.com/ros/ros-overlay/bb747eb5321c95b5dcd53715424b9fc1d20e97ac/ros-melodic/rospack/rospack-2.5.5-r1.ebuild -O $EPREFIX/usr/local/portage/ros-melodic/rospack/rospack-2.5.5-r1.ebuild &&\
+    $PREFIXED emerge ros-melodic/rospack
+
+# Until https://github.com/ros/ros-overlay/issues/963  is solved
+# We add manually the ros-melodic/roslib ebuild
+RUN wget https://raw.githubusercontent.com/ros/ros-overlay/ae66b6fcaaf231fb1224ea4b2318fe7e6601988d/ros-melodic/roslib/roslib-1.14.7-r1.ebuild -O $EPREFIX/usr/local/portage/ros-melodic/roslib/roslib-1.14.7-r1.ebuild &&\
+    wget https://raw.githubusercontent.com/ros/ros-overlay/ae66b6fcaaf231fb1224ea4b2318fe7e6601988d/ros-melodic/roslib/Manifest -O $EPREFIX/usr/local/portage/ros-melodic/roslib/Manifest &&\
+    $PREFIXED emerge ros-melodic/roslib
+
 # Setup the basic ROS
-RUN $PREFIXED emerge ros-kinetic/ros_base || true
+RUN $PREFIXED emerge ros-melodic/ros_base || true
 # Apparently dev-lisp/sbcl-1.4.13 sometimes may fail in some of the tests
 # given the machine is too stressed
 # SB-CONCURRENCY-TEST::MAILBOX.INTERRUPTS-SAFETY.1.
 # So just re-running may fix it
 # (if nothing failed, this will just take a couple of seconds)
-RUN $PREFIXED emerge ros-kinetic/ros_base
+RUN $PREFIXED emerge ros-melodic/ros_base
 
 # Create the bin packages
 # RUN $PREFIXED quickpkg \"*/*\" --include-config y --include-unmodified-config y
