--- a/ros_base/Dockerfile2
+++ b/ros_base/Dockerfile2
@@ -71,6 +71,18 @@ RUN echo ">=dev-lisp/sbcl-1.5.0" >> $EPREFIX/etc/portage/package.mask
 RUN unlink $EPREFIX/usr/bin/gm4 \
     && ln -s $EPREFIX/usr/bin/m4 $EPREFIX/usr/bin/gm4
 
+# Got this... so, obeying:
+# The following USE changes are necessary to proceed:
+# required by media-libs/mesa-20.0.1-r1::gentoo[libglvnd]
+# required by x11-libs/gtk+-3.24.14::gentoo[X]
+# required by x11-themes/adwaita-icon-theme-3.32.0::gentoo
+# required by x11-libs/gtk+-2.24.32-r1::gentoo
+# required by dev-python/wxpython-3.0.2.0::gentoo
+# required by ros-kinetic/actionlib-1.11.13::ros-overlay
+# required by ros-kinetic/ros_base-1.3.2::ros-overlay
+# required by ros-kinetic/ros_base (argument)
+RUN echo ">=media-libs/libglvnd-1.3.1 X" >> $EPREFIX/etc/portage/package.use
+
 # Until https://github.com/ros/ros-overlay/pull/965 is merged
 # We add manually the rospack ebuild without the double rosdep dependency
 RUN wget https://raw.githubusercontent.com/ros/ros-overlay/bb747eb5321c95b5dcd53715424b9fc1d20e97ac/ros-melodic/rospack/rospack-2.5.5-r1.ebuild -O $EPREFIX/usr/local/portage/ros-melodic/rospack/rospack-2.5.5-r1.ebuild &&\
