--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -257,7 +257,7 @@ jobs:
  
   - job: package_stage_desktop
     timeoutInMinutes: 0
-    # dependsOn: "build_ros_kinetic_desktop_3"
+    dependsOn: "build_ros_kinetic_desktop_3"
 
     pool:
       vmImage: 'Ubuntu 16.04'
