--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -310,7 +310,7 @@ jobs:
         export DATE=$(date -I'minutes' | sed 's/+/plus/g'| sed 's/:/at/g')
         export RELEASE_TAG=release/${DATE}
         export RELEASE_FILE_NAME=gentoo_on_tmp_with_$(rosdistro)_$(bundlename)-${PLATFORM}_${DATE}.tar.gz
-        export RELEASE_NAME="Gentoo Prefix on /tmp/gentoo with ROS $(bundlename)"
+        export RELEASE_NAME="Gentoo Prefix on /tmp/gentoo with ROS Kinetic $(bundlename)"
         export BODY="Use ROS Kinetic on Gentoo Prefix with: cat ${RELEASE_FILE_NAME}.part-* > ${RELEASE_FILE_NAME}; tar xvf gentoo_on_tmp*.tar.gz; ./gentoo/startprefix"
         mv $HOME/gentoo_on_tmp.tar.gz ${RELEASE_FILE_NAME}
         docker system prune -a -f
