--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -119,11 +119,14 @@ jobs:
       displayName: 'push latest to DockerHub'
       # condition: always()
 
-    # Create a temporal container to copy the gentoo_on_tmp.tar.gz
-    - script: |
-        id=$(docker create $(DockerHub_user)/$(docker_image_name))
-        docker cp $id:/tmp/gentoo_on_tmp.tar.gz $HOME
-      displayName: 'Extract gentoo_on_tmp.tar.gz from Docker image'
+    - script: docker run --entrypoint /tmp/gentoo/executeonprefix $(DockerHub_user)/$(docker_image_name):$(Build.BuildId)  "tar -c --lzma -f - -C /tmp gentoo" > ~/gentoo_on_tmp.tar.lzma
+      displayName: 'Create .tar.lzma of /tmp/gentoo'
+
+    # # Create a temporal container to copy the gentoo_on_tmp.tar.gz
+    # - script: |
+    #     id=$(docker create $(DockerHub_user)/$(docker_image_name))
+    #     docker cp $id:/tmp/gentoo_on_tmp.tar.gz $HOME
+    #   displayName: 'Extract gentoo_on_tmp.tar.gz from Docker image'
     # Not really needed
     # - script: docker rm -v $id
     # Make a release
@@ -134,10 +137,10 @@ jobs:
     - script: |
         export DATE=$(date -I'minutes' | sed 's/+/plus/g'| sed 's/:/at/g')
         export RELEASE_TAG=release/${DATE}
-        export RELEASE_FILE_NAME=gentoo_on_tmp_with_$(rosdistro)_$(bundlename)-${PLATFORM}_${DATE}.tar.gz
+        export RELEASE_FILE_NAME=gentoo_on_tmp_with_$(rosdistro)_$(bundlename)-${PLATFORM}_${DATE}.tar.lzma
         export RELEASE_NAME="Gentoo Prefix on /tmp/gentoo ROS Kinetic $(bundlename)"
-        export BODY="Use ROS Kinetic on Gentoo Prefix with: cat ${RELEASE_FILE_NAME}.part-* > ${RELEASE_FILE_NAME}; tar xvf gentoo_on_tmp*.tar.gz; ./gentoo/startprefix"
-        mv $HOME/gentoo_on_tmp.tar.gz ${RELEASE_FILE_NAME}
+        export BODY="Use ROS Kinetic on Gentoo Prefix with: cat ${RELEASE_FILE_NAME}.part-* > ${RELEASE_FILE_NAME}; tar xvf gentoo_on_tmp*.tar.lzma; ./gentoo/startprefix"
+        mv $HOME/gentoo_on_tmp.tar.lzma ${RELEASE_FILE_NAME}
         docker system prune -a -f
         split -b 1024MB -d ${RELEASE_FILE_NAME} ${RELEASE_FILE_NAME}.part-
         export PATH=$HOME/.local/bin:$PATH
@@ -294,11 +297,14 @@ jobs:
       displayName: 'push latest to DockerHub'
       # condition: always()
 
-    # Create a temporal container to copy the gentoo_on_tmp.tar.gz
-    - script: |
-        id=$(docker create $(DockerHub_user)/$(docker_image_name))
-        docker cp $id:/tmp/gentoo_on_tmp.tar.gz $HOME
-      displayName: 'Extract gentoo_on_tmp.tar.gz from Docker image'
+    - script: docker run --entrypoint /tmp/gentoo/executeonprefix $(DockerHub_user)/$(docker_image_name):$(Build.BuildId)  "tar -c --lzma -f - -C /tmp gentoo" > ~/gentoo_on_tmp.tar.lzma
+      displayName: 'Create .tar.lzma of /tmp/gentoo'
+
+    # # Create a temporal container to copy the gentoo_on_tmp.tar.gz
+    # - script: |
+    #     id=$(docker create $(DockerHub_user)/$(docker_image_name))
+    #     docker cp $id:/tmp/gentoo_on_tmp.tar.gz $HOME
+    #   displayName: 'Extract gentoo_on_tmp.tar.gz from Docker image'
     # Not really needed
     # - script: docker rm -v $id
     # Make a release
@@ -309,10 +315,10 @@ jobs:
     - script: |
         export DATE=$(date -I'minutes' | sed 's/+/plus/g'| sed 's/:/at/g')
         export RELEASE_TAG=release/${DATE}
-        export RELEASE_FILE_NAME=gentoo_on_tmp_with_$(rosdistro)_$(bundlename)-${PLATFORM}_${DATE}.tar.gz
+        export RELEASE_FILE_NAME=gentoo_on_tmp_with_$(rosdistro)_$(bundlename)-${PLATFORM}_${DATE}.tar.lzma
         export RELEASE_NAME="Gentoo Prefix on /tmp/gentoo with ROS Kinetic $(bundlename)"
-        export BODY="Use ROS Kinetic on Gentoo Prefix with: cat ${RELEASE_FILE_NAME}.part-* > ${RELEASE_FILE_NAME}; tar xvf gentoo_on_tmp*.tar.gz; ./gentoo/startprefix"
-        mv $HOME/gentoo_on_tmp.tar.gz ${RELEASE_FILE_NAME}
+        export BODY="Use ROS Kinetic on Gentoo Prefix with: cat ${RELEASE_FILE_NAME}.part-* > ${RELEASE_FILE_NAME}; tar xvf gentoo_on_tmp*.tar.lzma; ./gentoo/startprefix"
+        mv $HOME/gentoo_on_tmp.tar.lzma ${RELEASE_FILE_NAME}
         docker system prune -a -f
         split -b 1024MB -d ${RELEASE_FILE_NAME} ${RELEASE_FILE_NAME}.part-
         export PATH=$HOME/.local/bin:$PATH
