--- a/package_stage/Dockerfile.desktop
+++ b/package_stage/Dockerfile.desktop
@@ -1,6 +1,6 @@
 FROM awesomebytes/roogp_ros_melodic_desktop_3
 
 # Create the .tar.gz
-RUN tar cvzf /tmp/gentoo_on_tmp.tar.gz gentoo
+# RUN tar cvzf /tmp/gentoo_on_tmp.tar.gz gentoo
 
 ENTRYPOINT ["/bin/bash"]
