--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -97,6 +97,8 @@ jobs:
     # The variables are set on the Build options on the web interface
     - script: docker login -u $(DockerHub_user) -p $(DockerHub_password)
       displayName: 'docker login'
+    - script: docker system prune -a -f
+      displayName: 'clear disk space'
 
     - script: cd package_stage && docker build -f Dockerfile.ros_base -t $(DockerHub_user)/$(docker_image_name):$(Build.BuildId) .
       displayName: 'docker build package_stage'
@@ -276,6 +278,8 @@ jobs:
     # The variables are set on the Build options on the web interface
     - script: docker login -u $(DockerHub_user) -p $(DockerHub_password)
       displayName: 'docker login'
+    - script: docker system prune -a -f
+      displayName: 'clear disk space'
 
     - script: cd package_stage && docker build -f Dockerfile.desktop -t $(DockerHub_user)/$(docker_image_name):$(Build.BuildId) .
       displayName: 'docker build package_stage'
