--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -121,7 +121,7 @@ jobs:
       displayName: 'push latest to DockerHub'
       # condition: always()
 
-    - script: docker run --entrypoint /tmp/gentoo/executeonprefix $(DockerHub_user)/$(docker_image_name):$(Build.BuildId)  "tar -c --lzma -f - -C /tmp gentoo" > ~/gentoo_on_tmp.tar.lzma
+    - script: docker run --entrypoint /tmp/gentoo/executeonprefix $(DockerHub_user)/$(docker_image_name):$(Build.BuildId)  "tar -c --lzma -f - -C /tmp gentoo --remove-files || true" > ~/gentoo_on_tmp.tar.lzma
       displayName: 'Create .tar.lzma of /tmp/gentoo'
 
     # # Create a temporal container to copy the gentoo_on_tmp.tar.gz
@@ -263,7 +263,7 @@ jobs:
  
   - job: package_stage_desktop
     timeoutInMinutes: 0
-    dependsOn: "build_ros_kinetic_desktop_3"
+    # dependsOn: "build_ros_kinetic_desktop_3"
 
     pool:
       vmImage: 'Ubuntu 16.04'
@@ -302,7 +302,7 @@ jobs:
       displayName: 'push latest to DockerHub'
       # condition: always()
 
-    - script: docker run --entrypoint /tmp/gentoo/executeonprefix $(DockerHub_user)/$(docker_image_name):$(Build.BuildId)  "tar -c --lzma -f - -C /tmp gentoo" > ~/gentoo_on_tmp.tar.lzma
+    - script: docker run --entrypoint /tmp/gentoo/executeonprefix $(DockerHub_user)/$(docker_image_name):$(Build.BuildId)  "tar -c --lzma -f - -C /tmp gentoo --remove-files || true" > ~/gentoo_on_tmp.tar.lzma
       displayName: 'Create .tar.lzma of /tmp/gentoo'
 
     # # Create a temporal container to copy the gentoo_on_tmp.tar.gz
