--- a/desktop/Dockerfile3
+++ b/desktop/Dockerfile3
@@ -28,6 +28,10 @@ RUN echo ">dev-python/numpy-1.17" >> $EPREFIX/etc/portage/package.mask && \
 
 RUN $PREFIXED emerge ros-kinetic/python_qt_binding
 
+# Patch meanwhile https://github.com/ros/ros-overlay/issues/980 gets resolved
+RUN rm $EPREFIX/usr/local/portage/ros-melodic/rviz/Manifest &&\
+    $PREFIXED ebuild $EPREFIX/usr/local/portage/ros-melodic/rviz/rviz-1.13.9.ebuild manifest
+
 # Setup desktop (237 packages)
 RUN $PREFIXED emerge ros-kinetic/desktop || true
 
