--- a/ros_base/Dockerfile
+++ b/ros_base/Dockerfile
@@ -152,16 +152,12 @@ RUN $PREFIXED emerge dev-util/cmake
 
 # Make sure rosdep & catkin emerge OK
 # Higher versions of rospkg (out of ros-overlay) unsupport python2
-# ros-kinetic/nodelet_topic_tools is the first to fail if rospkg is not in py2
+# ros-melodic/nodelet_topic_tools is the first to fail if rospkg is not in py2
 RUN echo ">=dev-python/rospkg-1.8" >> $EPREFIX/etc/portage/package.mask
-
-RUN echo ">=dev-python/rosdistro-9999 -python_targets_python3_6" >> $EPREFIX/etc/portage/package.use &&\
-    echo ">=dev-python/rosdep-0.13.0 -python_targets_python3_6" >> $EPREFIX/etc/portage/package.use
-# Meanwhile https://github.com/ros/ros-overlay/pull/975 is merged
-RUN cd $EPREFIX/usr/local/portage/dev-python/catkin_pkg &&\
-    rm * && wget https://raw.githubusercontent.com/ros/ros-overlay/86cb1c66c47f2b61334e30f8c90fb7f6975e2f99/dev-python/catkin_pkg/catkin_pkg-0.4.16.ebuild -O catkin_pkg-0.4.16.ebuild &&\
-    $PREFIXED ebuild $EPREFIX/usr/local/portage/dev-python/catkin_pkg/catkin_pkg-0.4.16.ebuild manifest
-RUN $PREFIXED emerge dev-python/rosdep ros-kinetic/catkin
+RUN echo ">=dev-python/rosdistro-9999 -python_targets_python3_5 -python_targets_python3_6  -python_targets_python3_7" >> $EPREFIX/etc/portage/package.use &&\
+    echo ">=dev-python/rosdep-0.13.0 -python_targets_python3_5 -python_targets_python3_6  -python_targets_python3_7" >> $EPREFIX/etc/portage/package.use &&\
+    echo ">=dev-python/catkin_pkg-0.4.20 -python_targets_python3_5 -python_targets_python3_6  -python_targets_python3_7" >> $EPREFIX/etc/portage/package.use
+RUN $PREFIXED emerge dev-python/rosdep ros-melodic/catkin
 
 RUN echo "sys-libs/libcap -pam" >> $EPREFIX/etc/portage/package.use
 
