--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -138,9 +138,9 @@ jobs:
     # Not really needed
     # - script: docker rm -v $id
     # Make a release
-    - script: python -m pip install --upgrade pip setuptools wheel
+    - script: python3 -m pip install --upgrade pip setuptools wheel
       displayName: 'Install tools'
-    - script: python -m pip install --user githubrelease
+    - script: python3 -m pip install --user githubrelease
       displayName: 'Install tools 2'
     - script: |
         export DATE=$(date -I'minutes' | sed 's/+/plus/g'| sed 's/:/at/g')
@@ -153,7 +153,7 @@ jobs:
         split -b 1536MB -d /mnt/ramdisk/gentoo_on_tmp.tar.lzma ${RELEASE_FILE_NAME}.part-
         rm /mnt/ramdisk/gentoo_on_tmp.tar.lzma
         export PATH=$HOME/.local/bin:$PATH
-        export PYTHONPATH=$HOME/.local/lib/python2.7/site-packages:$PYTHONPATH
+        export PYTHONPATH=$HOME/.local/lib/python3.5/site-packages:$PYTHONPATH
         githubrelease --github-token $(GitHub_Token) release $(Build.Repository.Name) create "${RELEASE_TAG}" --publish --name "${RELEASE_NAME}" --body "${BODY}" "${RELEASE_FILE_NAME}.part-*"
       displayName: 'Create Release'
 
@@ -325,9 +325,9 @@ jobs:
     # Not really needed
     # - script: docker rm -v $id
     # Make a release
-    - script: python -m pip install --upgrade pip setuptools wheel
+    - script: python3 -m pip install --upgrade pip setuptools wheel
       displayName: 'Install tools'
-    - script: python -m pip install --user githubrelease
+    - script: python3 -m pip install --user githubrelease
       displayName: 'Install tools 2'
     - script: |
         export DATE=$(date -I'minutes' | sed 's/+/plus/g'| sed 's/:/at/g')
@@ -340,6 +340,6 @@ jobs:
         split -b 1536MB -d /mnt/ramdisk/gentoo_on_tmp.tar.lzma ${RELEASE_FILE_NAME}.part-
         rm /mnt/ramdisk/gentoo_on_tmp.tar.lzma
         export PATH=$HOME/.local/bin:$PATH
-        export PYTHONPATH=$HOME/.local/lib/python2.7/site-packages:$PYTHONPATH
+        export PYTHONPATH=$HOME/.local/lib/python3.5/site-packages:$PYTHONPATH
         githubrelease --github-token $(GitHub_Token) release $(Build.Repository.Name) create "${RELEASE_TAG}" --publish --name "${RELEASE_NAME}" --body "${BODY}" "${RELEASE_FILE_NAME}.part-*"
       displayName: 'Create Release'
