--- a/ros_base/Dockerfile2
+++ b/ros_base/Dockerfile2
@@ -61,7 +61,7 @@ RUN echo "# required by dev-python/wxpython-3.0.2.0::gentoo\n\
 # //Options: --prefix='/tmp/gentoo/usr' --xc-host='sh /home/user/gentoo/var/tmp/portage/dev-lisp/sbcl-1.5.8/work/sbcl-binary/run-sbcl.sh --no-sysinit --no-userinit --disable-debugger'
 # /home/user/gentoo/var/tmp/portage/dev-lisp/sbcl-1.5.8/work/sbcl-binary/src/runtime/sbcl: /lib/x86_64-linux-gnu/libc.so.6: version `GLIBC_2.28' not found (required by /home/user/gentoo/var/tmp/portage/dev-lisp/sbcl-1.5.8/work/sbcl-binary/src/runtime/sbcl)
 # So we revert to stable version
-RUN echo ">=dev-lisp/sbcl-1.5.0" >> $EPREFIX/etc/portage/package.mask
+# RUN echo ">=dev-lisp/sbcl-1.5.0" >> $EPREFIX/etc/portage/package.mask
 
 
 # media-libs/mesa-19.3.2 fails with:
@@ -85,15 +85,15 @@ RUN echo ">=media-libs/libglvnd-1.3.1 X" >> $EPREFIX/etc/portage/package.use
 
 # Until https://github.com/ros/ros-overlay/pull/965 is merged
 # We add manually the rospack ebuild without the double rosdep dependency
-RUN wget https://raw.githubusercontent.com/ros/ros-overlay/bb747eb5321c95b5dcd53715424b9fc1d20e97ac/ros-melodic/rospack/rospack-2.5.5-r1.ebuild -O $EPREFIX/usr/local/portage/ros-melodic/rospack/rospack-2.5.5-r1.ebuild &&\
-    $PREFIXED ebuild $EPREFIX/usr/local/portage/ros-melodic/rospack/rospack-2.5.5-r1.ebuild manifest &&\
-    $PREFIXED emerge ros-melodic/rospack
+# RUN wget https://raw.githubusercontent.com/ros/ros-overlay/bb747eb5321c95b5dcd53715424b9fc1d20e97ac/ros-melodic/rospack/rospack-2.5.5-r1.ebuild -O $EPREFIX/usr/local/portage/ros-melodic/rospack/rospack-2.5.5-r1.ebuild &&\
+#     $PREFIXED ebuild $EPREFIX/usr/local/portage/ros-melodic/rospack/rospack-2.5.5-r1.ebuild manifest &&\
+RUN $PREFIXED emerge ros-melodic/rospack
 
 # Until https://github.com/ros/ros-overlay/issues/963  is solved
 # We add manually the ros-melodic/roslib ebuild
-RUN wget https://raw.githubusercontent.com/ros/ros-overlay/ae66b6fcaaf231fb1224ea4b2318fe7e6601988d/ros-melodic/roslib/roslib-1.14.7-r1.ebuild -O $EPREFIX/usr/local/portage/ros-melodic/roslib/roslib-1.14.7-r1.ebuild &&\
-    $PREFIXED ebuild  $EPREFIX/usr/local/portage/ros-melodic/roslib/roslib-1.14.7-r1.ebuild manifest &&\
-    $PREFIXED emerge ros-melodic/roslib
+# RUN wget https://raw.githubusercontent.com/ros/ros-overlay/ae66b6fcaaf231fb1224ea4b2318fe7e6601988d/ros-melodic/roslib/roslib-1.14.7-r1.ebuild -O $EPREFIX/usr/local/portage/ros-melodic/roslib/roslib-1.14.7-r1.ebuild &&\
+#     $PREFIXED ebuild  $EPREFIX/usr/local/portage/ros-melodic/roslib/roslib-1.14.7-r1.ebuild manifest &&\
+RUN $PREFIXED emerge ros-melodic/roslib
 
 # Setup the basic ROS
 RUN $PREFIXED emerge ros-melodic/ros_base || true
